[tool.poetry]
name = "code-review-assistant"
version = "0.1.0"
description = ""
authors = ["Narvik <narvik4it@gmail.com>"]
readme = "README.md"
packages = [{include = "code-review-assistant"}]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11,!=3.9.7"
openai = "^0.27.2"
gitpython = "^3.1.31"
streamlit = "^1.20.0"
streamlit-tree-select = "^0.0.5"
tiktoken = "^0.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
known_first_party = "code-review-assistant
